--- a/notebooks/06_accounting.qmd
+++ b/notebooks/06_accounting.qmd
@@ -228,6 +228,6 @@ This user has filled 8643 M of physical space in their home directory, and has 1
 - Use command `lquota` to check disk and inode usage and allocation for all projects you are a member of 
 - Use `quota -s` to check disk and inode usage in your home directory
 - Requests for more SU can be made through the [Sydney Scheme management portal](http://nci.sydney.edu.au)
-- Requests for more scratch disk and scratch inode can be made through the [NCI help desk](https://nci.org.au/users/nci-helpdesk), and will require justification
-- Requests for more gdata disk and gdata inode can be made by [emailing the Sydney Scheme manager](mailto:nci-sydney.scheme@sydney.edu.au), and will require justification
+- Requests for more scratch disk, scratch inode, and gdata inode can be made through the [NCI help desk](https://nci.org.au/users/nci-helpdesk), and will require justification
+- Requests for more gdata disk can be made by [emailing the Sydney Scheme manager](mailto:nci-sydney.scheme@sydney.edu.au), and will require justification
 
