--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -26,11 +26,6 @@ In this section, we will look at transferring data between the Research Data Sto
 |                                           |                                       | - [Uses login node for computation]{style="color: red;"}       |
 |                                           |                                       | - [Cannot restart after interruption]{style="color: red;"}     |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
-| [rsync transfer from                      | Files up to a few GB.                 | - [Convenient for quickly copying data]{style="color: blue;"}  |
-|  Artemis terminal](#rs)                   |                                       | - [Can restart after interruption]{style="color: blue;"}       |
-|                                           |                                       | - [Uses login node for computation]{style="color: red;"}       |
-|                                           |                                       | - [Artemis only around until August]{style="color: red;"}      |
-+-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
 | [sftp copy using copyq](#scopyq)          | Large files and datasets              | - [Robust, runs in background]{style="color: blue;"}           |
 |                                           | to copy all in one go.                | - [Faster speed than `lftp`]{style="color: blue;"}             |
 |                                           |                                       | - [Always copies all files]{style="color: red;"}               |
@@ -39,33 +34,28 @@ In this section, we will look at transferring data between the Research Data Sto
 |                                           | only a few updated with each transfer.| - [Only copies whats changed]{style="color: blue;"}            |
 |                                           |                                       | - [Slower speed than `sftp`]{style="color: red;"}              |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
-| [Artemis rsync using dtq](#dtq)           | Any large dataset.                    | - [Robust, runs in background]{style="color: blue;"}           |
-|                                           |                                       | - [Only copies whats changed]{style="color: blue;"}            |
-|                                           |                                       | - [Artemis only around until August]{style="color: red;"}      |
-+-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
-| [Globus](#globus)                         | Any file/dataset size.                | - [Should do everything]{style="color: blue;"}                 |
-|                                           |                                       |   + [GUI]{style="color: blue;"}                                |
-|                                           |                                       |   + [Terminal copy and sync]{style="color: blue;"}             |
-|                                           |                                       |   + [`copyq` copy and sync]{style="color: blue;"}              |
-|                                           |                                       | - [Unknown time-frame for availability]{style="color: red;"}   |
+| [Globus](#globus)                         | Any file/dataset size.                | - [Fast and easy transfer with integrated checksum]{style="color: blue;"}                 |
+|                                           |                                       | - [Web app/GUI for drag and drop transfers]{style="color: blue;"}                                |
+|                                           |                                       | - [Command-line tool]{style="color: blue;"}             |
+|                                           |                                       | - [Must review and accept data security policy]{style="color: red;"}   |
 +-------------------------------------------+---------------------------------------+----------------------------------------------------------------+
 
 
 ## Where to put project files on Gadi
 
-On Gadi (like on Artemis) you have access to a number of different storage areas for project files and data. Check the [NCI User Guides](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...) for more detailed information. Here we provide a brief introduction for those familiar with Artemis.
+On Gadi you have access to a number of different storage areas for project files and data. Check the [NCI User Guides](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...) for more detailed information. Here we provide a brief introduction for those familiar with the recently decommissioned Artemis HPC.
 
 Each space is intended for use in a specific way:
 
 #### /home
 
-Your home space (`/home/<nci_user_id>`) is owned by you and has 10 GiB of available space. This cannot be increased.
+Your home space (`/home/<nci_user_id>`) is owned by you and has 10 GB of available space. This cannot be increased.
 
-It works similarly to your /home space on Artemis and should only be used to store things like program code, batch scripts or software configuration information. Note that as space is extremely limited here it is unadvisable to use this space for storing project data.
+Your `home` directory is backed up, and should only be used to store things like program code, batch scripts or software configuration information. Note that as space is extremely limited here it is unadvisable to use this space for storing project data.
 
 #### /scratch
 
-Your scratch space (`/scratch/<project>`) is owned by your project and has 1 TiB of available space which can be increased upon request to NCI. It is roughly equivalent to `/scratch` on Artemis.
+Your scratch space (`/scratch/<project>`) is owned by your project and has 1 TB of available space which can be increased upon request to NCI. 
 
 Data are not backed up and files not accessed for 100 days will be quarantined for 14 days and then removed (See [here](https://opus.nci.org.au/spaces/Help/pages/241926268/Recover+Files...RecoverFiles...-RecoverQuarantinedFilesonscratch) for instructions for removing files from quarantine).
 
@@ -85,29 +75,31 @@ To check the amount of disk space you have available in the data areas listed ab
 
 ## Research data store (RDS)
 
-The RDS is NOT being decommissioned along with Artemis HPC. Any RDS projects you currently have will persist on RDS. It is your responsibility to backup any data on Artemis filesystems (`/home`, `/scratch`, `/project`) that you wish to keep prior to the decommission date of August 29 2025. For information on how to go about this see the 
-[SIH Artemis Training Series](https://sydney-informatics-hub.github.io/training.artemis.rds/04-rcos2hpc/index.html).
+The RDS was NOT decommissioned along with Artemis HPC. Any RDS projects you currently have will persist on RDS. 
 
 In this section, we will mainly focus on how to transfer data between Gadi HPC and RDS. You should be able follow similar methods for copying data between your own laptop/server and Gadi.
 
 ## Data transfer options
 Depending on the size and complexity of the data you are transferring you have multiple options available:
 
-  + For small transfers (<1GB) you can use a GUI based data transfer client such as `filezilla` or `cyberduck`.
+  + For small transfers (<1 GB) you can use a GUI based data transfer client such as `filezilla` or `cyberduck`.
 
   + For mid sized transfers up to tens of GB you can use terminal based transfer.
 
-  + For large transfers you should use the data transfer queue options on either Gadi (`copyq`) or Artemis (`dtq`). 
+  + For large transfers you should use the data transfer queue on Gadi (`copyq`) or Globus. 
 
 ::: {.callout-warning}
 All data transfer to and from Gadi should be made using the "Data Mover Node" at `gadi-dm.nci.org.au` where possible rather than the login nodes. This ensures that data transfer will not consume otherwise limited resources on the login nodes.
 :::
 
-### Globus - COMING SOON {#globus}
+### Globus {#globus}
 
 [Globus](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3492052996/Globus+Data+Transfer) is a data transfer service that makes it easier to copy data around. Instead of data transfers running on your local computer, you submit data transfer requests to the Globus service, and the data transfers happen on Globus servers independently of your local computer. Globus can verify all data is successfully transferred and retry transfers until they succeed.
 
-There are several approaches for transferring data using Globus from the University of Sydney's Research Data Store (RDS) to Gadi. 
+#### Requesting Globus for your project
+
+The lead chief investigator of each project must review the [Privacy Collection Notice](https://sydneyuni.service-now.com/sm?id=kb_article_view&sysparm_article=KB0037229) and let us know whether they approve Globus endpoints for their NCI/Pawsey and RDS projects or not.  Opt-in via DashR will be available soon. Until then, please contact [Sydney Informatics Hub](https://sydney.au1.qualtrics.com/jfe/form/SV_5mXyhFZsPIwZDBs) to request Globus access for your project/s. 
+
 
 #### Using the Globus web interface
 
@@ -138,6 +130,9 @@ If you get an error similar to the below after granting consent, you need to [re
 ![Error NCI web app](../fig/issueusernamemapping.png)
 :::
 
+#### Using the Globus command line interface
+
+TO BE COMPLETED
 
 ### Transfer using RDS mapped network drive and data transfer client{#gui}
 
@@ -167,15 +162,15 @@ If you have successfully logged in, you will see a directory listing of `/home/<
 You can then transfer data to and from RDS and NCI by dragging and dropping files between your computer’s file explorer and the Cyberduck window.
 :::
 
-### Transfer from Gadi/Artemis terminal to/from RDS
+### Transfer from Gadi terminal to/from RDS
 
 You can use commands in your terminal application (Mac and linux: Terminal, Windows: Windows Terminal or Powershell equivalent) as an alternative to graphical applications.
 
-Since the connection will be terminated if your computer sleeps, terminal crashes, network drops out etc, this method is not particularly robust for large transfers. For these rather use the queue based methods (either `copyq` on Gadi or `dtq` on Artemis) described below.
+Since the connection will be terminated if your computer sleeps, terminal crashes, network drops out etc, this method is not particularly robust for large transfers. Large transfers should use the queue based method (`copyq` on Gadi) or Globus, each described below.
 
 #### Transfers from a terminal on Gadi
 
-Due to stringent security settings around Artemis and RDS, familiar commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes. Instead you have to use commands like `sftp` to copy the data.
+Due to stringent security settings around RDS, familiar commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes. Instead you have to use commands like `sftp` to copy the data.
 
 ::: {.callout-warning}
 Please note that running these commands on the login nodes is not the recommended way to transfer research data to Gadi! For smaller downloads, this is OK, but for normal purposes the use of Gadi’s `copyq` and data mover nodes are the appropriate tools.
@@ -215,61 +210,10 @@ To transfer data between RDS and Gadi from the Gadi login shell:
 :::
 
 
-#### Transfers from a terminal on Artemis using rsync
-
-::: {.callout-warning}
-This option is only available prior to the decommission of Artemis on 29 August 2025 - after that date you will have to use either GLOBUS (*preferred*), or copy data when logged into the Gadi terminal (either at the login shell or using `copyq` scripts).
-:::
-
-When logged into Artemis you can use the `rsync` or `scp` command to copy data directly to/from Gadi, since Gadi allows the kind of secure connection that these commands require.
-
-Using rsync will allow you to *sync* data between RDS and Gadi, this means that only files that have been updated since the last transfer will be copied. This will allow small changes to large datasets to be transferred quickly. 
-
-::: {.callout-tip}
-## Transfer from direct connection to RDS
-
-You can also initiate the transfer in a terminal from a connection via ssh to `research-data-int.sydney.edu.au` (on campus or USyd VPN) and using the `rsync` method described here - just replace `hpc.sydney.edu.au` with `research-data-int.sydney.edu.au` in step 1.
-:::
-
-::: {.callout-note #rs}
-## How to transfer from RDS to Gadi (and vice-versa) at an Artemis terminal using rsync
-
-To transfer data between RDS and Gadi from the Artemis login shell:
-
-  1. Open a terminal using the 'Terminal' app on MacOS or the 'Command Prompt' app on Windows and then log into Artemis using ssh:
-
-      ```bash
-      ssh <your_unikey>@hpc.sydney.edu.au
-      ```
-
-      You may be prompted to enter your password at this stage.
-
-  2. Copy the data from  `rds`, to a specific location on Gadi, e.g:
-
-      ```bash
-      rsync -rtlPvz /rds/PRJ-<Project Short ID>/<Path to File or Folder in RDS> <nci_user_id>@gadi-dm.nci.org.au:<Destination on Gadi>
-      ```
-
-      For example if I wanted to sync data from my `Training` project on RDS in the folder `MyData` to Gadi in the scratch space for my NCI project named `qc03`:
-
-      ```bash
-      rsync -rtlPvz /rds/PRJ-Training/MyData <nci_user_id>@gadi-dm.nci.org.au:/scratch/qc03/MyData
-      ```
-
-  3. You will be prompted for the password associated with your username on Gadi and the transfer will commence.
-
-
-If you want to copy the other way around (ie. from Gadi /scratch to RDS) then simply reverse the order of the above command in step 2, e.g:
-
-  ```bash
-  rsync -rtlPvz <nci_user_id>@gadi-dm.nci.org.au:<Source on Gadi> /rds/PRJ-<Project Short ID>/<Destination on RDS>
-  ```
-:::
-
 ### Using `tmux` to run commands in persistent terminal sessions
 
 ::: {.callout-warning}
-While this method can help you run your copy job in the background over a long period of time, it is recommended to rather use the `copyq` transfer method described below for large file transfers, as running jobs on the login node can overwhelm their scant resources.
+While this method can help you run your copy job in the background over a long period of time, it is recommended to rather use Globus or the `copyq` transfer method described below for large file transfers, as running jobs on the login node can overwhelm their scant resources.
 :::
 
 You can run data transfers or other long-running commands in a [`tmux`](https://github.com/tmux/tmux/wiki/Getting-Started) persistent session which can be *detached* to run in the background. This allows you to log out and even switch off your computer while the command still runs within the detached session. You can reattach to the `tmux` session later to review the command's progress and output. 
@@ -286,22 +230,19 @@ For more information about `tmux` and its options, check [here](https://www.redh
 
 ### Transfer using `sftp` or `lftp` from Gadi `copyq`
 
-The data transfer queue on Gadi is called `copyq`. This is comparable to the data transfer queue on Artemis `dtq`. Data transfer methods/scripts that you used to put data onto Artemis for example from the web via `wget` or from another server should be easily portable to use on Gadi's `copyq`. 
+The data transfer queue on Gadi is called `copyq`. This is comparable to the `dtq` data transfer queue you may be familiar with on the recently decommissioned Artemis HPC. Data transfer methods/scripts that you previosuly used to put data onto Artemis for example from the web via `wget` or from another server should be easily portable to use on Gadi's `copyq`. 
 
 ::: {.callout-important}
-If you have been relying on ssh key pairs between Gadi and Artemis for passwordless data transfers, please create a new ssh key pair between Gadi and `research-data-ext` (the RDS login server), as after 29th August, your Gadi-Artemis key pair will no longer work.
-Users have home directory on `research-data-ext` with a very small quota to enable storing of ssh key files. 
+You will need an ssh key pair between Gadi and `research-data-ext` (the RDS login server) for passwordless transfers running on the `copyq`. Users have a home directory on `research-data-ext` with a very small quota to enable storing of ssh key files. See below for instructions for creating the key pair. 
 :::
 
-Please note that the compute nodes on Gadi **do not have** internet access like the Artemis compute nodes do, so all required data must first be downloaded before submitting a compute job that requires the data.  
+Please note that the compute nodes on Gadi **do not have internet access**, so all required data must first be downloaded before submitting a compute job that requires the data.  
 
-Due to stringent security settings around Artemis and RDS, commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes or `copyq`. To initiate the transfer from Gadi, `sftp` or `lftp` must be used. In the not too distant future Globus will become available for data transfer and then that will be the preferred method for transferring data to and from Gadi.
+Due to stringent security settings around RDS, commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes or `copyq`. To initiate the transfer from Gadi, `sftp` or `lftp` must be used. Globus is now available for data transfer between NCI and RDS, and provided that your project can approve the data security policy, Globus is the preferred method for transferring data between Gadi and RDS.
 
 #### How to set up SSH keys for passwordless data transfer
 
 If you are transferring data directly for example `scp` on the command line or via a transfer client on your local computer, entering a password to initiate the transfer is straightforward. If however you want to transfer via a job submitted to either `copyq` or `dtq`, you will need to set up SSH keys first, or else your script will halt while it waits for a password to be entered.
-
-**If you have been relying on ssh key pairs between gadi and Artemis for passwordless data transfers, please create a new ssh key pair between Gadi and research-data-ext (the RDS login server), as after 29th August, your Gadi-Artemis key pair will no longer work.
 
 You only need to set this up once.
 
@@ -617,7 +558,7 @@ This can be a nerve-wracking process, especially if you are transferring large f
 qstat -Esw
 ```
 
-Once it says R (running), you can confirm it is going to where you want on RDS/Artemis or Gadi by logging into the system and checking for the presence of the file/directory in its expected location using: 
+Once it says R (running), you can confirm it is going to where you want on RDS or Gadi by logging into the system and checking for the presence of the file/directory in its expected location using: 
 
 ```bash
 ls MyData
@@ -703,59 +644,6 @@ For example a simple workflow for large projects that have a lot of data and man
 
   2. Subsequently use the `lftp` based `sync_gadi_to_rds.pbs` to sync smaller files (e.g. output logs and data) back to RDS, without having to re-copy the bulk of the data back to RDS.
 
-### Transfer using rsync from Artemis dtq {#dtq}
-
-::: {.callout-warning}
-
-This option is only available prior to the decommission of Artemis on 29 August 2025 - after that date you will have to use either GLOBUS (*preferred*), or copy data when logged into the Gadi terminal (either at the login shell or using `copyq` scripts).
-
-:::
-
-For transfer of large files directly from Artemis to Gadi, the use of resumable `rsync` is recommended (see script below). The transfer can be initiated using Artemis `dtq` and using Gadi’s data mover node: `gadi-dm.nci.org.au`. The below template script can be used with Artemis' `dtq` using `rsync`.
-
-For further info about copying data from Artemis `dtq` can be found in the [SIH Artemis Training Series](https://sydney-informatics-hub.github.io/training.artemis.rds/04-rcos2hpc/index.html).
-
-:::{.callout-note}
-## Template Artemis data transfer script using `rsync`
-
-```bash
-#!/bin/bash
-
-# This is an Artemis data transfer script
-
-#PBS -P <project>
-#PBS -N transfer
-#PBS -l walltime=04:00:00
-#PBS -l ncpus=1
-#PBS -l mem=8GB
-#PBS -W umask=022
-#PBS -q dtq
-
-# NOTE: Add a trailing slash (/) to source_path if you don't want to create the
-# parent directory at the destination. 
-source_path=/rds/PRJ-<project>/<path>/<file>
-
-destination=<user>@gadi-dm.nci.org.au
-destination_path=<path-on-gadi>
-
-while [ 1 ]
-do
-        echo Transferring ${source_path} to ${destination}:${destination_path}
-        rsync -rtlPvz --append-verify ${source_path} ${destination}:${destination_path}
-
-        if [ "$?" = "0" ]
-        then
-                echo "Rsync completed normally"
-                dt=$(date)
-                echo Finished transferring at $dt
-        exit
-        else
-                echo "Rsync failure. Backing off and retrying in 3 minutes"
-                sleep 180
-        fi
-done
-```
-:::
 
 ## Verify the integrity of your transferred data{#checksum}
 
@@ -767,7 +655,9 @@ A checksum is a small, fixed-size value calculated from the contents of a file u
 [SHA-1](https://en.wikipedia.org/wiki/SHA-1), or [SHA-256](https://en.wikipedia.org/wiki/SHA-2)).
 Think of it as a unique fingerprint for the file's data: if even one byte changes, the checksum will be different. By comparing the checksum before and after the transfer, you can confirm that the file is exactly the same on both ends.
 
-The overall process of verifying data transfer is outlined in the figure below. In some cases, you may already have checksum files that you have previously generated, or even downloaded with your raw data. If so, there is no need to re-generate the "source" checksum files. 
+If you are using Globus, checksum verification is included by default, and failed transfers are automatically retried. You will receive an email with a status of "SUCCESS" once all files in your transferred dataset have been copied and verified at the destination. 
+
+The overall process of verifying data transfer manually with md5sums is outlined in the figure below. In some cases, you may already have checksum files that you have previously generated, or even downloaded with your raw data. If so, there is no need to re-generate the "source" checksum files. 
 
 
 For transfers **from RDS to Gadi**, RDS is the "source" and Gadi is the "destination": 
@@ -887,8 +777,7 @@ Any files with `FAILED` status should be re-copied from Gadi to RDS, and the che
 
 For large files or datasets with numerous files, creating checksums or running checksum comparisons can be time-consuming. When we `ssh` into `research-data-int.sydney.edu.au` and run the checksum command, this is reliant on your terminal window staying open and connected, your internet connection remaining stable, your computer not going to sleep or being switched off, etc. On Gadi, we can mitigate these issues by submitting long walltime checksum commands to the job scheduler. Below are some other options to run checksum commands (or any other data management commands) on data stored on RDS:
 
+- Use Globus to transfer the data to RDS. Globus will perform the checksum verification for you. 
 - [Map your RDS as a network drive](https://sydneyuni.atlassian.net/wiki/x/NACgDQ) on your local computer. Then, use your mac terminal, Windows Powershell, WSL2, etc to run the commands using your local computer's resources. You will still need to ensure stable internet connection and that your computer does not go to sleep mode (unless using tmux, see below), however this setup may be more stable than relying on the ssh connection to the RDS login node.  
-- Run your checksum commands within a persistent terminal session with `tmux`. You can do this with an ssh connection to `research-data-int.sydney.edu.au`, or from the mac/Powershell/WSL2 terminal reading the RDS mapped network drive. When you run your checksum command inside a `tmux` session and then detach from it, the session (and the command) will remain active, even if you lose internet connection, close your terminal, or even power off your computer. You can reattach to the same session later to check the status of the checksum command. See [the section on tmux above](#using-tmux-to-run-commands-in-persistent-terminal-sessions) for basic use. 
-- Until decommission date of August 29, the data transfer queue `dtq` on Artemis can be used to run checksums on data within RDS. `dtq` is the only queue on Artemis that can read RDS. 
-- Globus (coming soon) will simplify and expedite data transfer between RDS and Gadi. Globus will handle checksum creation and verification for you if the appropriate flags are set. 
+- Run your checksum commands within a persistent terminal session with `tmux`. You can do this with an ssh connection to `research-data-int.sydney.edu.au`, or from the mac/Powershell/WSL2 terminal reading the RDS mapped network drive. When you run your checksum command inside a `tmux` session and then detach from it, the session (and the command) will remain active, even if you lose internet connection, close your terminal, or even power off your computer. You can reattach to the same session later to check the status of the checksum command. See [the section on tmux above](#using-tmux-to-run-commands-in-persistent-terminal-sessions) for basic use.  
 
